--- a/app/src/main/res/layout/gvitem_word.xml
+++ b/app/src/main/res/layout/gvitem_word.xml
@@ -7,7 +7,7 @@
     android:padding="3dp">
 
     <TextView
-        android:id="@+id/prgvitem_word_tv"
+        android:id="@+id/gvitem_word_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
